Adding redirects for deployment

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "edh.dev",
-  "name": "Ed Hinrichsen – Personal Website",
+  "short_name": "tykunal.dev",
+  "name": "Kunal Tyagi – Personal Website",
   "icons": [
     {
       "src": "icon/32x32.png",
